[package]
name = "saddle-world-spline-tools-example-extrusion-road"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-world-spline-tools = { workspace = true }
saddle-world-spline-tools-example-support = { path = "../support" }

[lints]
workspace = true
